--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html lang="nl">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Loyalty Wallet</title>
 
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#1976d2" />
-
-    <!-- iOS PWA -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="Loyalty Wallet" />
   </head>
   <body>
-<div id="root"></div>
-<script type="module" src="/src/main.jsx"></script>
+    <div id="root"></div>
+
+    <!-- Vite entry -->
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
